@@ -46,6 +46,10 @@ perfdata:
  purpose of the check. Please look at the shipped PNP template for
  details.
 
+[parameters]
+parameters(dict): a dictionary with the optional key
+
+ {"OpenSlots"} : (int, int) -  warn/crit levels for the number of remaining open slots
 
 
 
