@@ -982,6 +982,31 @@ register_check_parameters(
 )
 
 register_check_parameters(
+    subgroup_applications,
+    "apache_status",
+    ("Apache Status"),
+    Dictionary(
+        elements = [
+            ( "OpenSlots",
+              Tuple(
+                  title = _("Remaining Open Slots"),
+                  help = _("Here you can set the number of remaining open slots"),
+                  elements = [
+                      Integer(title = _("Warning at"),  label = _("slots")),
+                      Integer(title = _("Critical at"), label = _("slots"))
+                  ]
+              )
+            )
+        ]
+    ),
+    TextAscii(
+        title = _("Apache Server"),
+        help  = _("A string-combination of servername and port, e.g. 127.0.0.1:5000.")
+    ),
+    "first"
+)
+
+register_check_parameters(
     subgroup_networking,
     "tcp_conn_stats_win",
     ("TCP connection stats (Windows)"),
